// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation Snapshot tests should match snapshot 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <h3
        class="component header system-small bold primary"
      >
        Введите код из сообщения
      </h3>
      <span
        class="phone primary primary-medium"
      >
        Код отправлен на 
      </span>
      <div
        class="component codeInput codeInput"
      >
        <div
          class=""
        >
          <input
            autocomplete="one-time-code"
            class="input"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
        </div>
      </div>
      <div
        class="countdown countdownContainer primary-medium"
      >
        Запросить повторно можно через
         
        01:00
      </div>
      <a
        class="component secondary pseudo smsComeLink"
      >
        <span
          class="text"
        >
          Не приходит сообщение?
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with CODE_CHECKING state 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <h3
        class="component header system-small bold primary"
      >
        Введите код из сообщения
      </h3>
      <span
        class="phone primary primary-medium"
      >
        Код отправлен на 
      </span>
      <div
        class="component codeInput codeInput"
      >
        <div
          class=""
        >
          <input
            autocomplete="one-time-code"
            class="input disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
        </div>
      </div>
      <div
        class="loaderWrap countdownContainer"
      >
        <div
          class="component"
        >
          <div />
          <div />
          <div />
        </div>
        <span
          class="loaderText"
        />
      </div>
      <a
        class="component secondary pseudo smsComeLink"
      >
        <span
          class="text"
        >
          Не приходит сообщение?
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with CODE_ERROR state 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <h3
        class="component header system-small bold primary"
      >
        Введите код из сообщения
      </h3>
      <span
        class="phone primary primary-medium"
      >
        Код отправлен на 
      </span>
      <div
        class="component codeInput codeInput"
      >
        <div
          class="shake"
        >
          <input
            autocomplete="one-time-code"
            class="input hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
        </div>
        <div
          class="error"
          role="alert"
        >
          Код введён неверно
        </div>
      </div>
      <div
        class="countdown countdownContainer primary-medium"
      >
        Запросить повторно можно через
         
        01:00
      </div>
      <a
        class="component secondary pseudo smsComeLink"
      >
        <span
          class="text"
        >
          Не приходит сообщение?
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with CODE_SENDING state 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <h3
        class="component header system-small bold primary"
      >
        Введите код из сообщения
      </h3>
      <span
        class="phone primary primary-medium"
      >
        Код отправлен на 
      </span>
      <div
        class="component codeInput codeInput"
      >
        <div
          class=""
        >
          <input
            autocomplete="one-time-code"
            class="input disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
        </div>
      </div>
      <div
        class="loaderWrap countdownContainer"
      >
        <div
          class="component"
        >
          <div />
          <div />
          <div />
        </div>
        <span
          class="loaderText"
        />
      </div>
      <a
        class="component secondary pseudo smsComeLink"
      >
        <span
          class="text"
        >
          Не приходит сообщение?
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with FATAL_ERROR screen 1`] = `
<div>
  <div
    class="component left"
  >
    <h3
      class="component header system-small bold primary"
    >
      Ввести код больше нельзя
    </h3>
    <span
      class="description primary primary-medium"
    >
      Вы ввели код неверно более 5 раз. В целях безопасности мы ограничили дальнейший ввод.
    </span>
    <button
      class="component secondary s component secondary"
      type="button"
    >
      <span
        class="text stretchText"
      >
        Понятно
      </span>
    </button>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with HINT screen 1`] = `
<div>
  <div
    class="component left"
  >
    <h3
      class="component header system-small bold primary"
    >
      Превышено количество попыток запроса кода
    </h3>
    <span
      class="description primary primary-medium"
    >
      Повторное подтверждение кодом будет возможно через 24 часа
    </span>
    <div
      class="countdownWrap"
    >
      <svg
        class="loader"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <circle
          class="circle"
          cx="8"
          cy="8"
          r="7"
          stroke-dasharray="43.98"
          stroke-dashoffset="0.00"
          transform="rotate(-90 8 8)"
        />
      </svg>
      24:00:00
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with HINT screen 2`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <div
        class="hintWrap"
      >
        <h3
          class="component header system-small bold primary"
        >
          Не приходит сообщение?
        </h3>
        <span
          class="text primary primary-medium"
        >
          Если у вас изменился номер телефона, позвоните нам или обратитесь в любое отделение банка.
        </span>
        <div
          class="phonesWrap"
        >
          <div
            class="phoneWrap"
          >
            <a
              class="component primary withoutUnderline phoneLink"
              href="tel:+78002000000"
            >
              <span
                class="text"
              >
                8 800 200-00-00
              </span>
            </a>
            <span
              class="text primary primary-medium"
            >
               
              — для звонков по России
            </span>
          </div>
          <div
            class="phoneWrap"
          >
            <a
              class="component primary withoutUnderline phoneLink"
              href="tel:+74957888878"
            >
              <span
                class="text"
              >
                +7 495 78-888-78
              </span>
            </a>
            <span
              class="text primary primary-medium"
            >
               
              — в Москве и за границей
            </span>
          </div>
        </div>
        <span
          class="text primary primary-medium"
        >
          Если номер не менялся, возможно, перегружен сервис отправки сообщений. Попробуйте повторить действие через несколько минут.
        </span>
        <button
          class="component secondary s component secondary hintButton"
          type="button"
        >
          <span
            class="text stretchText"
          >
            Вернуться к вводу кода
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
